--- a/src/views/pages/create.hbs
+++ b/src/views/pages/create.hbs
@@ -1,39 +1,42 @@
 <main class="main-create-edit container">
   <h2 class="titulo-seccion">CREAR NUEVO ITEM</h2>
-  <form action="" class="form-item">
+  <form
+    action="/admin/create"
+    class="form-item"
+    method="post"
+    enctype="multipart/form-data"
+  >
     <div class="cont-categ-licencia">
       <div>
-        <label for="categoria" class="form-label">Categoria</label>
-        <select name="categoria" id="" class="select-form">
-          <option value="">Seleccionar</option>
-          <option value="">1</option>
-          <option value="">2</option>
-          <option value="">3</option>
+        <label for="category" class="form-label">Categoria</label>
+        <select name="category" id="" class="select-form">
+          <option value="1">Figuras Coleccionables</option>
+          <option value="2">Llaveros</option>
+          <option value="3">Remeras</option>
         </select>
       </div>
       <div>
-        <label for="licencia" class="form-label">Licencia</label>
-        <select name="licencia" id="" class="select-form">
-          <option value="">Seleccionar</option>
-          <option value="">1</option>
-          <option value="">2</option>
-          <option value="">3</option>
+        <label for="licence" class="form-label">Licencia</label>
+        <select name="licence" id="" class="select-form">
+          <option value="1">Pokemon</option>
+          <option value="2">Star Wars</option>
+          <option value="3">Harry Potter</option>
         </select>
 
       </div>
     </div>
     <div>
-      <label for="nombre-producto" class="form-label">Nombre del producto:</label>
+      <label for="itemName" class="form-label">Nombre del producto:</label>
       <input
         type="text"
-        name="nombre-producto"
+        name="itemName"
         id=""
         class="form-input"
         placeholder="Kakashi Hatake Shippuden Saga"
       />
     </div>
     <textarea
-      name=""
+      name="description"
       id=""
       cols="30"
       rows="10"
@@ -51,7 +54,7 @@
       <label for="precio" class="form-label">Precio:</label>
       <input
         type="number"
-        name="precio"
+        name="price"
         class="form-input"
         placeholder="$0.000,00"
       />
@@ -59,28 +62,34 @@
       <input type="number" name="stock" class="input-stock" placeholder="0" />
     </div>
     <div class="cont-desc-cuotas">
-      <label for="descuento" class="form-label">Descuento:</label>
+      <label for="discount" class="form-label">Descuento:</label>
       <input
         type="number"
-        name="descuento"
+        name="discount"
         id=""
         class="form-input input-desc"
         placeholder="0%"
       />
       <label for="cuotas" class="form-label">Cuotas</label>
-      <select name="cuotas" id="" class="select-form">
-        <option value="">3 Cuotas sin interés</option>
-        <option value="">2</option>
-        <option value="">3</option>
+      <select name="dues" id="" class="select-form">
+        <option value="3">3 Cuotas sin interés</option>
+        <option value="2">2 Cuotas sin interés</option>
+        <option value="1">1 Cuota sin interés</option>
       </select>
 
     </div>
     <div>
       <label for="imagenes" class="form-label">Imágenes:</label>
-      <input type="file" name="imagenes" id="" class="input-imagenes" />
+      <input
+        type="file"
+        name="images"
+        id="images"
+        class="input-imagenes"
+        multiple
+      />
     </div>
     <div>
-      <button class="btn-form">Agregar Producto</button>
+      <button class="btn-form" type="submit">Agregar Producto</button>
       <button class="btn-form">Limpiar</button>
     </div>
 
