move script tags to their corresponding pages

--- a/src/views/pages/cart.hbs
+++ b/src/views/pages/cart.hbs
@@ -88,3 +88,7 @@
     <a href="" class="link-pago">IR A PAGAR</a>
   </div>
 </main>
+<script
+  src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"
+></script>
+<script src="../js/script-cart.js"></script>
