--- a/src/views/pages/item.hbs
+++ b/src/views/pages/item.hbs
@@ -88,3 +88,8 @@
     </div>
   </section>
 </main>
+<script
+  src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
+></script>
+<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+<script src="/js/glide.js"></script>
