--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -1,23 +1,55 @@
 <main class="main-register">
-    <h2 class="titulo-seccion">CREA TU CUENTA</h2>
-    <p class="p-register">Completa el formulario para ser parte del muno de los Funkos</p>
-    <form action="" class="form-registro">
-        <label for="nombre">Nombre</label>
-        <input type="text" name="nombre" id="" class="form-input" placeholder="John">
-        <label for="apellido">Apellido</label>
-        <input type="text" name="apellido" id="" class="form-input" placeholder="Doe">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="" class="form-input" placeholder="johndoe@correo.com">
-        <label for="password">Contraseña</label>
-        <input type="password" name="password" id="" class="form-input" placeholder="*********">
-        <label for="repita-password">Repita Contraseña</label>
-        <input type="text" name="repita-password" id="" class="form-input" placeholder="*********">
-    </form>
-    <div>
-        <button class="btn-form">Registrar</button>
-        <input type="checkbox" name="acepto-condiciones" id="">
-        <label for="acepto-condiciones" class="acepto-condiciones">Acepto<a href=""
-                class="link-form link-form-acepto-cond">Términos y
-                Condiciones</a></label>
-    </div>
+  <h2 class="titulo-seccion">CREA TU CUENTA</h2>
+  <p class="p-register">Completa el formulario para ser parte del mundo de los
+    Funkos</p>
+  <form action="" class="form-registro">
+    <label for="nombre">Nombre</label>
+    <input
+      type="text"
+      name="nombre"
+      id=""
+      class="form-input"
+      placeholder="John"
+    />
+    <label for="apellido">Apellido</label>
+    <input
+      type="text"
+      name="apellido"
+      id=""
+      class="form-input"
+      placeholder="Doe"
+    />
+    <label for="email">Email</label>
+    <input
+      type="email"
+      name="email"
+      id=""
+      class="form-input"
+      placeholder="johndoe@correo.com"
+    />
+    <label for="password">Contraseña</label>
+    <input
+      type="password"
+      name="password"
+      id=""
+      class="form-input"
+      placeholder="*********"
+    />
+    <label for="repita-password">Repita Contraseña</label>
+    <input
+      type="text"
+      name="repita-password"
+      id=""
+      class="form-input"
+      placeholder="*********"
+    />
+  </form>
+  <div>
+    <button class="btn-form">Registrar</button>
+    <input type="checkbox" name="acepto-condiciones" id="" />
+    <label for="acepto-condiciones" class="acepto-condiciones">Acepto<a
+        href=""
+        class="link-form link-form-acepto-cond"
+      >Términos y Condiciones</a></label>
+  </div>
 </main>
