Add Contact page

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/styles/create-edit.css" />
     <link rel="stylesheet" type="text/css" href="/styles/login-register.css" />
     <link rel="stylesheet" type="text/css" href="/styles/admin.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/contact.css" />
 
     <title>{{title}}</title>
   </head>
