--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -45,7 +45,7 @@
         </li>
         <li class="navbar__item"><a
             class="navbar-link"
-            href=""
+            href="/contact"
           >CONTACTO</a></li>
         <li class="navbar__item"><a
             class="navbar-link"
