Fix error in createItem function and change Admin route method from POST to GET

--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -1,6 +1,6 @@
 <main class="main-login">
   <h2 class="titulo-seccion titulo-login">INGRESAR A MI CUENTA</h2>
-  <form action="/admin" class="form-login-register" method="post">
+  <form action="" class="form-login-register" method="post">
     <div class="cont-input">
       <label for="email">Email:</label>
       <input
